[gd_scene load_steps=3 format=2]

[ext_resource path="res://actor_states/motion/Motion.tscn" type="PackedScene" id=1]
[ext_resource path="res://actor_framework/player/states/Idle.gd" type="Script" id=2]

[node name="Idle" type="Node2D"]
script = ExtResource( 2 )

[node name="Motion" parent="." instance=ExtResource( 1 )]

[node name="MotionSteering" parent="Motion" index="1"]
max_speed = 1100.0
mass = 5.0

[node name="AirTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="JumpRegisteredTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DropThroughTimer" type="Timer" parent="."]
wait_time = 0.1
[connection signal="timeout" from="AirTimer" to="." method="_on_AirTimer_timeout"]
[connection signal="timeout" from="JumpRegisteredTimer" to="." method="_on_JumpRegisteredTimer_timeout"]
[connection signal="timeout" from="DropThroughTimer" to="." method="_on_DropThroughTimer_timeout"]

[editable path="Motion"]
